fix broken style in blink/chrome browser

--- a/src/assets/scss/radio.scss
+++ b/src/assets/scss/radio.scss
@@ -26,6 +26,7 @@
 
 		&::before {
 			content:'';
+			box-sizing: border-box;
 			position: absolute;
 			display: block;
 			width: 1em;
@@ -61,6 +62,7 @@
 	}
 
 	&__group.meta {
+		display: flex;
 		.radio__label {
 			background-color: #0000;
 			display: grid;
